--- a/src/components/home/Hero/Hero.module.css
+++ b/src/components/home/Hero/Hero.module.css
@@ -1,18 +1,242 @@
-.hero {
-	width: 100%;
-	height: 700px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
+/* Desktop */
+@media screen and (min-width: 1024px) {
+	.content {
+		max-width: 600px;
+		margin: 0 auto;
+		padding: 0 20px;
+	}
+
+	.hero {
+		position: relative;
+		background: #001ba6;
+		color: white;
+		height: 800px;
+		display: flex;
+		align-items: center;
+		overflow: hidden;
+	}
+
+	.hero h2 {
+		position: relative;
+		z-index: 1;
+		font-size: 4.5rem;
+		color: #fff;
+		text-align: center;
+		margin-bottom: 20px;
+	}
+
+	.hero p {
+		position: relative;
+		z-index: 1;
+		font-size: 1.1rem;
+		color: #fff;
+		text-align: center;
+	}
+
+	/* ========================= */
+
+	.waves {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		height: 300px;
+		background-color: #fff;
+		transition: 500ms;
+	}
+
+	.waves::before,
+	.waves::after {
+		content: "";
+		position: absolute;
+		width: 300vw;
+		height: 300vw;
+		top: -67vw;
+		left: 50%;
+		transform: translate(-50%, -75%);
+	}
+
+	.waves::before {
+		border-radius: 44%;
+		background: #001ba6;
+		animation: waves 15s linear infinite;
+	}
+
+	.waves::after {
+		border-radius: 44%;
+		background: rgba(51, 51, 51, 0.5);
+		animation: waves 20s linear infinite;
+	}
+
+	@keyframes waves {
+		0% {
+			transform: translate(-50%, -75%) rotate(0deg);
+		}
+
+		100% {
+			transform: translate(-50%, -75%) rotate(360deg);
+		}
+	}
 }
 
-.hero h1 {
-	color: white;
-	font-size: 3rem;
+/* Tablet */
+@media screen and (min-width: 700px) and (max-width: 1024px) {
+	.content {
+		max-width: 600px;
+		margin: 0 auto;
+		padding: 0 20px;
+	}
+
+	.hero {
+		position: relative;
+		background: #001ba6;
+		color: white;
+		height: 700px;
+		display: flex;
+		align-items: center;
+		overflow: hidden;
+	}
+
+	.hero h2 {
+		position: relative;
+		z-index: 1;
+		font-size: 3.5rem;
+		color: #fff;
+		text-align: center;
+		margin-bottom: 20px;
+	}
+
+	.hero p {
+		position: relative;
+		z-index: 1;
+		font-size: 1rem;
+		color: #fff;
+		text-align: center;
+	}
+
+	/* ========================= */
+
+	.waves {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		height: 300px;
+		background-color: #fff;
+		transition: 500ms;
+	}
+
+	.waves::before,
+	.waves::after {
+		content: "";
+		position: absolute;
+		width: 300vw;
+		height: 300vw;
+		top: -50vw;
+		left: 50%;
+		transform: translate(-50%, -75%);
+	}
+
+	.waves::before {
+		border-radius: 44%;
+		background: #001ba6;
+		animation: waves 15s linear infinite;
+	}
+
+	.waves::after {
+		border-radius: 44%;
+		background: rgba(51, 51, 51, 0.5);
+		animation: waves 20s linear infinite;
+	}
+
+	@keyframes waves {
+		0% {
+			transform: translate(-50%, -75%) rotate(0deg);
+		}
+
+		100% {
+			transform: translate(-50%, -75%) rotate(360deg);
+		}
+	}
 }
 
-.hero h2 {
-	color: white;
-	font-size: 2rem;
+/* Mobille */
+@media screen and (max-width: 700px) {
+	.content {
+		max-width: 600px;
+		margin: 0 auto;
+		padding: 0 20px;
+	}
+
+	.hero {
+		position: relative;
+		background: #001ba6;
+		color: white;
+		height: 700px;
+		display: flex;
+		align-items: center;
+		overflow: hidden;
+	}
+
+	.hero h2 {
+		position: relative;
+		z-index: 1;
+		font-size: 3rem;
+		color: #fff;
+		text-align: center;
+		margin-bottom: 20px;
+	}
+
+	.hero p {
+		position: relative;
+		z-index: 1;
+		font-size: 1rem;
+		color: #fff;
+		text-align: center;
+	}
+
+	/* ========================= */
+
+	.waves {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		height: 300px;
+		background-color: #fff;
+		transition: 500ms;
+	}
+
+	.waves::before,
+	.waves::after {
+		content: "";
+		position: absolute;
+		width: 300vw;
+		height: 300vw;
+		top: -30vw;
+		left: 50%;
+		transform: translate(-50%, -75%);
+	}
+
+	.waves::before {
+		border-radius: 44%;
+		background: #001ba6;
+		animation: waves 15s linear infinite;
+	}
+
+	.waves::after {
+		border-radius: 44%;
+		background: rgba(51, 51, 51, 0.5);
+		animation: waves 20s linear infinite;
+	}
+
+	@keyframes waves {
+		0% {
+			transform: translate(-50%, -75%) rotate(0deg);
+		}
+
+		100% {
+			transform: translate(-50%, -75%) rotate(360deg);
+		}
+	}
 }
