--- a/src/components/contact-us/Icons/Icons.module.css
+++ b/src/components/contact-us/Icons/Icons.module.css
@@ -1,66 +1,217 @@
-.icons {
-	padding: 100px 0;
-	width: 100%;
-	max-width: 1200px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0 auto;
+/* Desktop */
+@media screen and (min-width: 1024px) {
+	.icons {
+		padding: 100px 0;
+		width: 90%;
+		max-width: 1200px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0 auto;
+	}
+
+	.iconsContainer {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border: 1px solid rgba(11, 61, 44, 0.1);
+		border-radius: 20px;
+		background-color: #fcfaf7;
+	}
+
+	.icon {
+		width: 33%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		border-right: 1px solid rgba(11, 61, 44, 0.1);
+		padding: 30px 0;
+	}
+
+	.icon:last-child {
+		border-right: none;
+	}
+
+	.imageContainer {
+		width: 100px;
+		height: 100px;
+		background-color: #fff;
+		border-radius: 50%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin-bottom: 15px;
+	}
+
+	.imageContainer img {
+		width: 50px;
+		height: auto;
+	}
+
+	.icon h3 {
+		text-align: center;
+		font-size: 1rem;
+		font-weight: 600;
+		color: #000;
+		margin: 0;
+		padding: 0;
+		margin-bottom: 15px;
+	}
+
+	.icon p {
+		text-align: center;
+		font-size: 1.2rem;
+		font-weight: 600;
+		color: #000;
+		margin: 0;
+		padding: 0;
+	}
 }
 
-.iconsContainer {
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border: 1px solid rgba(11, 61, 44, 0.1);
-	border-radius: 20px;
-	background-color: #fcfaf7;
+/* Tablet */
+@media screen and (min-width: 700px) and (max-width: 1024px) {
+	.icons {
+		padding: 80px 0;
+		width: 90%;
+		max-width: 1200px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0 auto;
+	}
+
+	.iconsContainer {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		border: 1px solid rgba(11, 61, 44, 0.1);
+		border-radius: 20px;
+		background-color: #fcfaf7;
+	}
+
+	.icon {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		border-right: 1px solid rgba(11, 61, 44, 0.1);
+		padding: 30px 0;
+	}
+
+	.icon:last-child {
+		border-right: none;
+	}
+
+	.imageContainer {
+		width: 100px;
+		height: 100px;
+		background-color: #fff;
+		border-radius: 50%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin-bottom: 15px;
+	}
+
+	.imageContainer img {
+		width: 50px;
+		height: auto;
+	}
+
+	.icon h3 {
+		text-align: center;
+		font-size: 1rem;
+		font-weight: 600;
+		color: #000;
+		margin: 0;
+		padding: 0;
+		margin-bottom: 15px;
+	}
+
+	.icon p {
+		text-align: center;
+		font-size: 1.2rem;
+		font-weight: 600;
+		color: #000;
+		margin: 0;
+		padding: 0;
+	}
 }
 
-.icon {
-	width: 33%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	border-right: 1px solid rgba(11, 61, 44, 0.1);
-	padding: 30px 0;
-}
+/* Mobille */
+@media screen and (max-width: 700px) {
+	.icons {
+		padding: 80px 0;
+		width: 90%;
+		max-width: 1200px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0 auto;
+	}
 
-.icon:last-child {
-	border-right: none;
-}
+	.iconsContainer {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		border: 1px solid rgba(11, 61, 44, 0.1);
+		border-radius: 20px;
+		background-color: #fcfaf7;
+	}
 
-.imageContainer {
-	width: 100px;
-	height: 100px;
-	background-color: #fff;
-	border-radius: 50%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-bottom: 15px;
-}
+	.icon {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		border-right: 1px solid rgba(11, 61, 44, 0.1);
+		padding: 30px 0;
+	}
 
-.imageContainer img {
-	width: 50px;
-	height: auto;
-}
+	.icon:last-child {
+		border-right: none;
+	}
 
-.icon h3 {
-	font-size: 1rem;
-	font-weight: 600;
-	color: #000;
-	margin: 0;
-	padding: 0;
-	margin-bottom: 15px;
-}
+	.imageContainer {
+		width: 100px;
+		height: 100px;
+		background-color: #fff;
+		border-radius: 50%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin-bottom: 15px;
+	}
 
-.icon p {
-	font-size: 1.2rem;
-	font-weight: 600;
-	color: #000;
-	margin: 0;
-	padding: 0;
+	.imageContainer img {
+		width: 50px;
+		height: auto;
+	}
+
+	.icon h3 {
+		text-align: center;
+		font-size: 1rem;
+		font-weight: 600;
+		color: #000;
+		margin: 0;
+		padding: 0;
+		margin-bottom: 15px;
+	}
+
+	.icon p {
+		text-align: center;
+		font-size: 1.2rem;
+		font-weight: 600;
+		color: #000;
+		margin: 0;
+		padding: 0;
+	}
 }
