--- a/src/components/contact-us/Icons/Icons.module.css
+++ b/src/components/contact-us/Icons/Icons.module.css
@@ -27,7 +27,7 @@
 		align-items: center;
 		flex-direction: column;
 		border-right: 1px solid rgba(11, 61, 44, 0.1);
-		padding: 30px 0;
+		padding: 30px 10px;
 	}
 
 	.icon:last-child {
@@ -67,6 +67,8 @@
 		color: #000;
 		margin: 0;
 		padding: 0;
+		width: 100%;
+		word-wrap: break-word;
 	}
 }
 
@@ -100,7 +102,7 @@
 		align-items: center;
 		flex-direction: column;
 		border-right: 1px solid rgba(11, 61, 44, 0.1);
-		padding: 30px 0;
+		padding: 30px 10px;
 	}
 
 	.icon:last-child {
@@ -140,6 +142,8 @@
 		color: #000;
 		margin: 0;
 		padding: 0;
+		width: 100%;
+		word-wrap: break-word;
 	}
 }
 
@@ -173,7 +177,7 @@
 		align-items: center;
 		flex-direction: column;
 		border-right: 1px solid rgba(11, 61, 44, 0.1);
-		padding: 30px 0;
+		padding: 30px 10px;
 	}
 
 	.icon:last-child {
@@ -213,5 +217,7 @@
 		color: #000;
 		margin: 0;
 		padding: 0;
+		width: 100%;
+		word-wrap: break-word;
 	}
 }
