--- a/src/components/products/Card/Card.module.css
+++ b/src/components/products/Card/Card.module.css
@@ -13,13 +13,14 @@
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 450px;
+	max-width: 300px;
+	height: 400px;
 	cursor: pointer;
 }
 
 .card img {
 	width: 100%;
-	height: 350px;
+	height: 300px;
 	object-fit: cover;
 	border-radius: 20px;
 }
