--- a/src/components/products/Catalogue/Catalogue.module.css
+++ b/src/components/products/Catalogue/Catalogue.module.css
@@ -8,6 +8,7 @@
 		grid-template-columns: repeat(3, 1fr);
 		padding: 100px 0;
 		gap: 30px;
+		justify-items: center;
 	}
 }
 
@@ -21,6 +22,7 @@
 		grid-template-columns: repeat(2, 1fr);
 		padding: 100px 0;
 		gap: 30px;
+		justify-items: center;
 	}
 }
 
@@ -34,5 +36,6 @@
 		grid-template-columns: repeat(1, 1fr);
 		padding: 100px 0;
 		gap: 30px;
+		justify-items: center;
 	}
 }
